--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,16 +1,17 @@
 .modal-container {
-    width: 50vw;
-    height: fit-content;
-    padding: 2.3rem 1rem;
+    max-width: 50vw;
+    padding: 1rem 1rem;
     margin: auto;
-    position: relative;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 .modal-container::backdrop {
     background-color: rgba(0, 0, 0, 0.453);
 }
 
-.modal-close, .modal-delete, .modal-change {
+.modal-close, .modal-delete, .modal-change, .modal-download {
     display: block;
     width: 30px;
     height: 30px;
@@ -27,11 +28,101 @@
 .modal-delete {
     background-image: url(../img/trash-alt-svgrepo-com.svg);
 }
+.modal-download {
+    background-image: url('../img/download-square-svgrepo-com.svg');
+}
 
 .modal-icons-block {
-    position: absolute;
+    /* position: absolute;
     top: 10px;
-    right: 5px;
+    right: 5px; */
     display: flex;
     column-gap: .5rem;
+    align-self: flex-end;
+}
+
+.inactive {
+    display: none;
+}
+
+.modal-image {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+}
+
+.modal-audio {
+    width: 400px;
+}
+
+.modal-content-text {
+    font-size: 2rem;
+    word-wrap: break-word;
+}
+
+.modal-change-block {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.modal-text-change {
+    resize: none;
+    padding: 10px 5px;
+    border-radius: 10px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+}
+
+.modal-btns-container {
+    display: flex;
+    margin: 0 auto;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.modal-btns-container button {
+    padding-block: 7px;
+    padding-inline: 7px;
+    border-radius: var(--border-radius);
+}
+
+ .item-modal-title {
+    text-align: center;
+ }
+
+.delete-confirmation-block {
+    width: fit-content;
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
+    padding: 1rem 10px;
+    background-color: crimson;
+}
+
+.delete-confirmation-title {
+    color: #f9f9f9;
+    text-align: center;
+}
+.delete-confirmation-btns-block {
+    align-self: center;
+}
+
+.delete-confirmation-btns-block {
+    display: flex;
+    gap: 10px;
+}
+.delete-confirmation-btns-block button {
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    color: black;
+}
+
+.delete-confirmation-btns-block button:hover {
+    outline: none;
+    scale: 1.1;
 }
