--- a/src/css/widgetApp.css
+++ b/src/css/widgetApp.css
@@ -25,8 +25,8 @@
 }
 .input-icon {
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     background-position: center center;
     background-size: 25px;
     background-repeat: no-repeat;
@@ -34,8 +34,11 @@
 .search-icon {
     background-image: url('../img/search-icon.png');
 }
+.send-search-icon {
+    background-image: url('../img/send.png');
+}
 .widget-input {
-    width: 100%;
+    width: 90%;
 }
 .widget-input::placeholder {
     color: var(--elements-font-color);
@@ -50,7 +53,7 @@
     gap: 1rem;
 }
 .filter-btn {
-    width: calc(100% / 6);
+    width: calc(100% / 5);
     padding-block: 7px;
     border-radius: var(--border-radius);
     font-size: 20px;
@@ -65,7 +68,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-bottom: 40px;
 }
 .items-quantity-block {
     text-align: center;
@@ -73,16 +75,49 @@
     color: var(--elements-font-color);
 }
 .data-container {
-    min-height: 1px;
+    min-height: 360px;
     max-height: 400px;
+    padding-block-end: 40px;
     display: grid;
     grid-template-columns: repeat(4, calc(100% / 4 - 50px));
-    grid-template-rows: repeat(2, 170px);
-    grid-auto-rows: 170px;
+    grid-template-rows: repeat(auto-fill, 180px);
+    grid-auto-rows: 180px;
     column-gap: 50px;
-    row-gap: 30px;
-
+    row-gap: 10px;
+    scroll-snap-type: y mandatory;
     overflow-y: auto;
+}
+
+.item-box {
+    scroll-snap-align: start;
+}
+
+.item-box[type="audio"] {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.modal-logo-block {
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    width: 50%;
+    height: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.item-title {
+    font-size: .9rem;
+}
+
+.audio-logo {
+    background-image: url('../img/audio-headphones-svgrepo-com.svg');
+}
+.video-logo {
+    background-image: url('../img/video-svgrepo-com.svg');
 }
 
 /*--------------------Footer block: attach items--------------------*/
@@ -97,7 +132,7 @@
 }
 
 .text-input {
-    width: 70%;
+    width: 60%;
 }
 .attach-input {
     display: none;
@@ -107,7 +142,7 @@
     display: flex;
     justify-content: flex-end;
     gap: 10px;
-    width: 20%;
+    width: 30%;
 }
 
 .emoji-selector {
@@ -150,6 +185,7 @@
 }
 .emoji-icon {
     background-image: url('../img/emoji.png');
+    background-position: center;
 }
 .send-icon {
     background-image: url('../img/send.png');
@@ -157,6 +193,13 @@
 .emoji-icon, .input-icon {
     cursor: pointer;
 }
+.geolocation-icon {
+    background-image: url('../img/location-pin-svgrepo-com.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 30px;
+}
+
 
 [hidden] {
     display: none !important;
@@ -165,3 +208,63 @@
 .active {
     display: block;
 }
+
+.error {
+    width: 40%;
+    position: relative;
+    margin: 0 auto;
+    padding: 1rem 10px;
+    text-align: center;
+    border-radius: .5rem;
+    background-color: crimson;
+    color: #f9f9f9;
+    animation: appear .5s linear;
+}
+.remove-error {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-image: url('../img/cross-svgrepo-com\ new.svg');
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-size: 20px;
+    cursor: pointer;
+}
+
+.tooltip {
+    width: 40%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 1rem 10px;
+    text-align: center;
+    border-radius: .5rem;
+    background-color: #BBC7E2;
+    color: #f9f9f9;
+    animation: appear 1s linear;
+}
+
+@keyframes appear {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+    
+      1% {
+        opacity: 0;
+    }
+
+      49% {
+        display: block;
+        opacity: .5;
+      }
+    
+      100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+
