--- a/src/css/widgetApp.css
+++ b/src/css/widgetApp.css
@@ -68,6 +68,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 20px;
 }
 .items-quantity-block {
     text-align: center;
@@ -75,21 +76,27 @@
     color: var(--elements-font-color);
 }
 .data-container {
-    min-height: 360px;
-    max-height: 400px;
-    padding-block-end: 40px;
+    min-height: 380px;
+    max-height: 390px;
+    padding-block-end: 10px;
     display: grid;
     grid-template-columns: repeat(4, calc(100% / 4 - 50px));
     grid-template-rows: repeat(auto-fill, 180px);
     grid-auto-rows: 180px;
     column-gap: 50px;
-    row-gap: 10px;
+    row-gap: 20px;
     scroll-snap-type: y mandatory;
     overflow-y: auto;
+    justify-content: center;
 }
 
 .item-box {
     scroll-snap-align: start;
+    transition: scale .2s linear;
+}
+
+.item-box:hover {
+    scale: 0.93;
 }
 
 .item-box[type="audio"] {
